- UPX 3.93 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY
- Added ffmpeg to the video toolchain (mp4, mkv, ogv).
- New extensions supported in the video toolchain: .mpg .mpeg .flv .wmv .wma .rv .ra .rm .rmvb .ram .smil, qt, mov, 3gg, 3g2).
- Fixed some help typos (Joel Rangelle).
- Switched to official mozjpegtran binaries from https://ci.appveyor.com/project/CoolOppo/mozjpeg-svdl6/build/artifacts (TPS).
- Updated Leanify to 0.4.3.190 daily binaries.
- Updated ImageWorsener to 1.3.1.
- Updated ImageMagick 7.0.5.5 with HDRI support.
- Updated pingo to 0.80b.
- Some minor optimizations and code cleanup.


9.80 - 2017/04/15
- Ribbon interface is removed as adviced in FileOptimizer 9.00.
- Added detection 7-ZIP SFX archives, since as other SFX data overlay gets stripped after optimization (FatBit).
- Updated to C++ Builder 10.2 Tokyo.
- Faster and slightly smaller 32 bit version thanks to be migrated to CLang backend (64 bit already was).
- Faster 32 and 64 bit versions thanks to new -O3 CLang backend optimizations.
- Improved pingo JPEG optimizations.
- Updated to pngwolf-zopli 1.1.2.
- Updated to mutool 1.11.
- Updated to ECT 0.7.0 (9090e23) x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated Guetzli to 1.0.1 (olavrb).
- Updated pingo to 0.79p.
- Updated ImageMagick 7.0.5.4 with HDRI support.
- Updated to cppcheck 1.78.
- Some minor optimizations and code cleanup.

9.70 - 2017/03/25
- Added INI setting IncludeMask=. If not empty, only files containing this mask (substring) on name or path will be included from optimization (user202jkl).
- Added ECT ZIP support.
- Updated custom builds with Visual C++ 2017 (jsmin, gifsicle, jpegoptim).
- Updated Ghostscript to 9.21.
- Updated Guetzli to 1.0.
- Updaded Tidy to 5.4.0.
- Updated libwebp to 0.6.0.
- Updated pingo to 0.76.
- Updated Leanify to 0.4.3.188 daily binaries.